# my-keyboard

./: Cargo.toml  check-me.scad
chok-hotswap/: Cargo.toml
chok-hotswap/src/: chok_hotswap.rs  main.rs
ergoton/: Cargo.toml
ergoton/src/: main.rs
examples/: booleans.rs  check-me.scad
geometry/: Cargo.toml
geometry/examples/booleans/: main.rs
geometry/src/: basis.rs  bezier.rs  bsp.rs  cutter.rs  decimal.rs  edge.rs  geometry.rs  hull.rs  hyper_path.rs  indexes.rs  intersects.rs  keyboard.rs  lib.rs  measure_time.rs  mesh.rs  origin.rs  parametric_iterator.rs  path.rs  primitives.rs  primitives_relation.rs  shapes.rs  spatial_index.rs  spatial_index_2d.rs  stiching.rs  surface.rs  surface_depr.rs  volume.rs
geometry/src/bezier/: surface.rs
geometry/src/bsp/: bsp2.rs
geometry/src/hull/: hull_between_bounded_surfaces.rs
geometry/src/hyper_path/: direction_perpendicular.rs  hyper_line.rs  hyper_path.rs  hyper_point.rs  hyper_surface.rs  length.rs  line.rs  primitive_surface.rs  shifted_hyper_path.rs  simple_surface.rs  split_hyper_line.rs
geometry/src/hyper_path/hyper_surface/: dynamic_surface.rs  polygon_from_line_in_plane.rs  primitive_dynamic_surface.rs  primitive_surface.rs  simple_dynamic_surface.rs  simple_surface.rs  some_experiments.rs  surface.rs  surface_of_same_size.rs
geometry/src/indexes/: aabb.rs  geo_index.rs  octree.rs  polygon_oriented_bb.rs  quadtree.rs  sphere.rs  vertex_index.rs
geometry/src/indexes/geo_index/: face.rs  index.rs  line.rs  mesh.rs  poly.rs  poly_rtree.rs  rib.rs  seg.rs
geometry/src/linear/: line.rs  line2d.rs  ray.rs  segment.rs  segment2d.rs
geometry/src/path/: bezier.rs  polypath.rs  segment.rs
geometry/src/planar/: face.rs  plane.rs  polygon.rs
geometry/src/primitives/: basis.rs  cutter.rs  decimal.rs  line.rs  line2d.rs  origin.rs  plane.rs  polygon.rs  polygon_basis.rs  segment.rs  segment2d.rs
geometry/src/primitives_relation/: linear.rs  linear_planar.rs  linear_point.rs  planar.rs  planar_volume.rs  point_planar.rs  point_volume.rs
geometry/src/shapes/: cylinder.rs  plane.rs  rect.rs
geometry/src/surface/: surface_between_two_bezier.rs  topology.rs  tri_bezier.rs
geometry/src/volume/: mesh.rs  polyhedra.rs
keyboard/: Cargo.toml
keyboard/src/: angle.rs  bolt.rs  bolt_builder.rs  bolt_point.rs  button.rs  button_builder.rs  button_collection_builder.rs  button_collections.rs  button_mount.rs  buttons.rs  buttons_column.rs  buttons_column_builder.rs  hole.rs  hole_builder.rs  keyboard_builder.rs  keyboard_config.rs  keyboard_config_.rs  lib.rs  next_and_peek.rs
keyboard/src/buttons/: chok_hotswap.rs
smol/: Cargo.toml
smol/src/: cli.rs  main.rs
src/: cli.rs  geometry.rs  keyboard.rs  main.rs  utils.rs
src/geometry/: bsp.rs  hull.rs  mesh.rs  path.rs  polyline.rs  primitives.rs  spatial_index.rs  spatial_index_2d.rs  stiching.rs  surface.rs
src/geometry/bsp/: bsp2.rs  bsp3.rs
src/geometry/hull/: hull_between_bounded_surfaces.rs
src/geometry/path/: bezier.rs  polypath.rs  segment.rs
src/geometry/primitives/: decimal.rs  line.rs  line2d.rs  origin.rs  plane.rs  (+3 more)
src/keyboard/: bolt_builder.rs  button.rs  button_collections.rs  buttons_column.rs  with_next.rs
stand/: Cargo.toml
stand/src/: main.rs
(+3 files in other folders)
