[package]
name = "dactyl-manuform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.scad]
git = "ssh://git@github.com/stavenko/Rust-Scad.git"

[dependencies]
anyhow = "1.0.75"
assert_matches = "1.5.0"
bezier-nd = "0.5.0"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.12.0"
nalgebra = "0.32.3"
rayon = "1.8.0"
seq-macro = "0.3.5"

