[package]
name = "ergoton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.4.18"
decimal = "2.1.0"
geometry = { version = "0.1.0", path = "../geometry" }
itertools = "0.12.1"
keyboard = { version = "0.1.0", path = "../keyboard" }
nalgebra = "0.32.3"
num-traits = "0.2.18"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
stl_io = "0.7.0"
