[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
geometry = { version = "0.1.0", path = "../geometry" }
itertools = "0.12.0"
nalgebra = "0.32.3"
num-traits = "0.2.17"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
