[package]
name = "smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.4.18"
geometry = { version = "0.1.0", path = "../geometry" }
keyboard = { version = "0.1.0", path = "../keyboard" }
nalgebra = "0.32.3"
num-traits = "0.2.18"
stl_io = "0.7.0"
